# automated-testing-flask-dummy

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
quizzes/: app.py  forms.py  models.py  views.py
quizzes/templates/: choose_quiz_difficulty.html  index.html  ranking.html  take_quiz.html
tests/: test_models.py  test_views.py
