[tool.poetry]
name = "automated-testing-flask-dummy"
version = "0.1.0"
description = ""
authors = ["Piotr Kilczuk <piotr@kilczuk.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
Flask-User = "^1.0.2"
Flask-SQLAlchemy = "^2.5.1"
email-validator = "^1.1.3"
WTForms = "^3.0.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
